# vimouse_win32

./: .gitignore  README.md  main.py  pyproject.toml  setup.bat
vimouse/: __init__.py  keyboard_handler.py  mouse_controller.py  overlay.py  screen_analyzer.py  vimouse.py
