[project]
name = "vimouse"
version = "0.1.0"
description = "Vim-style mouse control application for Windows using keyboard shortcuts"
authors = [
    { name = "Sergey (slaid098)", email = "93754860+slaid098@users.noreply.github.com" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["vim", "mouse", "keyboard", "automation", "windows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Desktop Environment",
    "Topic :: Utilities"
]
dependencies = [
    "loguru>=0.7.3",
    "pyautogui>=0.9.54",
    "pywin32>=306",
    "pyqt6>=6.6.1",
    "opencv-python>=4.8.0",
    "mss>=9.0.1",
    "numpy>=1.26.0",
]

[project.urls]
"Homepage" = "https://github.com/slaid098/vimouse_win32"
"Bug Tracker" = "https://github.com/slaid098/vimouse_win32/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39" 
